# mudir

./: .gitignore  AGENTS.md  README.md  biome.json  components.json  drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.mts
docs/: brand-book.md  database.md  developer-setup.md
drizzle/: 0000_init_products.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
public/brand/: README.md
scripts/: generate-installer-assets.ps1  issue-license.ts  sync-pdf-worker.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  google_drive.rs  lib.rs  license.rs  main.rs
src/app/: layout.tsx  page.test.tsx  page.tsx
src/app/activate/: page.tsx
src/app/customers/: customer-import-dialog.tsx  customers-client.tsx
src/app/dashboard/: dashboard-charts.tsx  page.tsx
src/app/finance/: finance-client.tsx  page.tsx
src/app/inventory/: inventory-client.tsx  page.tsx
src/app/invoices/: page.tsx
src/bridge/: audit.ts  backup.ts  batches.ts  brands.ts  cash-sessions.ts  categories.ts  company-assets.ts  customers.ts  data-export.ts  expenses.ts  file-data-url.ts  google-drive.ts  import-shipments.ts  inventory.ts  invoice-pdf.ts  invoices.ts  license.ts  onboarding-progress.ts  orders.ts  ping.ts  product-media.ts  products.ts  purchase-payments.ts  purchases.ts  reports.test.ts  reports.ts  sales.ts  settings.ts  storage.ts  suppliers.ts  users.ts
src/components/: AppShell.tsx  CommandPalette.tsx  ModulePlaceholder.tsx  ThemeToggle.tsx  app-direction.tsx  app-icons.tsx  app-logo.tsx  app-nav.ts  app-shell.tsx  asset-preview.tsx  auth-gate.tsx  command-palette.tsx  data-table.tsx  empty-state.tsx  license-expiry-banner.tsx  local-asset-image.tsx  module-placeholder.tsx  nav-icons.ts  onboarding-wizard.tsx  operator-login-dialog.test.tsx  operator-login-dialog.tsx  page-header.tsx  product-combobox.tsx  theme-picker.tsx  theme-toggle.tsx
src/db/: schema.ts
src/domain/: types.ts
src/i18n/: context.ts  en.json  fa-AF.json  hooks.ts  index.ts  provider.tsx
src/lib/: app-db.ts  app-toast.ts  apply-sale-line-batches.ts  audit-log.ts  entity-routes.ts  format.test.ts  format.ts  native-dialog.ts  number-input.test.ts  number-input.ts  onboarding-storage.test.ts  onboarding-storage.ts  payment-totals.test.ts  payment-totals.ts  purchase-receive.ts  route.ts  run-in-transaction.ts  runtime.ts  sale-batch-allocation.test.ts  sale-batch-allocation.ts  settings-storage.ts  stock-report-pdf.ts  stock.ts  theme.test.ts  theme.ts  tour-popover-position.test.ts  tour-popover-position.ts  translate-error.test.ts  translate-error.ts  welcome.test.ts  welcome.ts
src/styles/: globals.css
(+98 files in other folders)
