[package]
name = "mudir"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/kazimkayhan/mudir"
keywords = ["tauri", "nextjs", "mudir"]
categories = ["gui"]

[features]
default = ["dev-license"]
# Disable for customer releases: `pnpm tauri build -- --no-default-features`
dev-license = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_nextjs_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
rusqlite = { version = "0.32", features = ["backup"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread"] }
urlencoding = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Broad groups as warn — pedantic/all are too noisy for small apps; CI still enforces critical lints below.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Tauri pulls transitive deps that legitimately duplicate major versions; unification is upstream.
multiple_crate_versions = { level = "allow", priority = 1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Unimplemented items can be left as warnings
todo = "warn"
unimplemented = "warn"

# Correctness (deny)
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"

# Performance (warn/deny)
inefficient_to_string = "deny"
large_enum_variant = "warn"
large_stack_arrays = "warn"
needless_pass_by_value = "warn"

# Style (warn)
missing_errors_doc = "warn"
missing_panics_doc = "warn"
